queues completed with all testcases

--- a/Queue/Makefile
+++ b/Queue/Makefile
@@ -2,13 +2,13 @@
 	clean
 
 test: queue.o test_queue.o
-	gcc $(cflags) queue.o test_queue.o -o test
+	gcc $(cflags) queue.o test_queue.o -g -o test
 
 queue.o: queue.c queue.h
-	gcc $(cflags) -c queue.c
+	gcc $(cflags) -g -c queue.c
 
 test_queue.o: test_queue.c queue.h
-	gcc $(cflags) -c test_queue.c
+	gcc $(cflags) -g -c test_queue.c
 
 clean:
-	rm *.o *~
+	rm *.o *~ test
