finished newBst and addDataBst :) working on DFS

--- a/BinaryTree/Makefile
+++ b/BinaryTree/Makefile
@@ -1,6 +1,8 @@
 .phony:
 	clean
 
+cflags= -Wall -Wmissing-declarations -Wmissing-prototypes -fsanitize=address -fno-omit-frame-pointer
+
 test: bst.o testbst.o
 	gcc $(cflags) bst.o testbst.o -g -o test
 
