recursively size finding function done :)

--- a/BinaryTree/Makefile
+++ b/BinaryTree/Makefile
@@ -1,10 +1,10 @@
-.phony:
+.PHONY:
 	clean
 
 cflags= -Wall -Wmissing-declarations -Wmissing-prototypes -fsanitize=address -fno-omit-frame-pointer
 
 test: bst.o testbst.o
-	gcc $(cflags) bst.o testbst.o -g -o test
+	gcc $(cflags) -g bst.o testbst.o -o test
 
 bst.o: bst.c bst.h
 	gcc $(cflags) -g -c bst.c
